syntax = "proto3";

package deployments;

message WebService {
  string id = 1;
  string repoName = 2;
  string repoUrl = 3;
  string status = 4;
  string outDir = 5;
  string runCommand = 6;
  string buildCommand = 7;
  string userId = 8;
  int32 createdAt = 9;
  int32 updatedAt = 10;
  string depoloymentUrl = 11;
  string instanceType = 12;
}

service DeploymentsService {
  rpc CreateWebService(CreateWebServiceDto) returns (WebService) {}
  rpc GetDeployment(GetDeploymentDto) returns (WebService) {}
}

message CreateWebServiceDto {
  string repoName = 1;
  string url = 2;
  string userId = 3;
  optional string outDir = 4;
  string runCommand = 5;
  optional string buildCommand = 6;
  string instanceType = 7;
}

message GetDeploymentDto { string id = 1; }
